--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,16 @@
         <version>3.0.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>ed</groupId>
     <artifactId>back_snekhome</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>back_snekhome</name>
-    <description>back_snekhome</description>
+    <packaging>jar</packaging>
+
+    <name>back_snekhome</name> <!--info, unnecessary tag-->
+    <description>back_snekhome</description> <!--info, unnecessary tag-->
+
+
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -52,7 +57,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>8.0.0.Final</version>
         </dependency>
@@ -61,7 +66,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.3.1</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -85,7 +90,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.5</version>
+            <version>2.11.0</version>
         </dependency>
 
         <dependency>
@@ -117,6 +122,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.1.3</version>
             </plugin>
         </plugins>
     </build>
