--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
             <version>2.11.0</version>
         </dependency>
 
+        <!--Security and JWT tokens-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -113,6 +114,22 @@
             <version>0.11.5</version>
         </dependency>
 
+
+        <!--Web sockets: -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>sockjs-client</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>stomp-websocket</artifactId>
+            <version>2.3.4</version>
+        </dependency>
 
     </dependencies>
 
